test/classes/figueroa/ErroneousOpOverloading1.good
ErroneousOpOverloading1.chpl:2: error: invalid method name
