test/classes/figueroa/ErroneousOpOverloading1.chpl
class C {
  proc +(x) {writeln("In +, x is ", x);}
}

var c: C = new C();
